ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
          - path: /
            streamlit-frontend:
              serviceName: streamlit-app-svc
              servicePort: 8502
          - path: /?(.*)
            backend:
              serviceName: text-summarization-svc
              servicePort: 81
          - path: /?(.*)
            backend:
              serviceName: visual-question-answering-svc
              servicePort: 80
